Task instance Java/7